--- a/app/src/main/res/layout/activity_login_owner.xml
+++ b/app/src/main/res/layout/activity_login_owner.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
 
         <variable
             name="viewModel"
-            type="com.example.android.e7gzlykora.views.Loginowner" />
+            type="com.example.android.e7gzlykora.viewmodels.LoginOwnerFragmentViewModel" />
     </data>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/login_layout"
+<androidx.drawerlayout.widget.DrawerLayout
+    android:id="@+id/loginOwner_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     >
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background"
@@ -164,5 +162,5 @@
                 android:gravity="center" />
         </LinearLayout>
     </LinearLayout>
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
 </layout>
