--- a/app/src/main/res/layout/activity_register_layout.xml
+++ b/app/src/main/res/layout/activity_register_layout.xml
@@ -4,10 +4,9 @@
 
         <variable
             name="viewModel"
-            type="com.example.android.e7gzlykora.views.Register" />
+            type="com.example.android.e7gzlykora.viewmodels.RegisterViewModel" />
     </data>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
     android:id="@+id/register_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -178,5 +177,5 @@
                 android:gravity="center" />
         </LinearLayout>
     </LinearLayout>
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
 </layout>
