--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
 
         <variable
             name="viewModel"
             type="com.example.android.e7gzlykora.SplashActivity" />
     </data>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
     android:id="@+id/join_community_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -46,7 +44,9 @@
             android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="18sp"
             android:textStyle="italic"
-            android:theme="@android:style/ButtonBar" />
+            android:theme="@android:style/ButtonBar"
+            android:layout_marginRight="133dp"
+            android:layout_alignParentRight="true" />
 
         <Button
             android:id="@+id/button2"
@@ -65,7 +65,9 @@
             android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="18sp"
             android:textStyle="italic"
-            android:theme="@android:style/ButtonBar" />
+            android:theme="@android:style/ButtonBar"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="134dp" />
 
         <Button
             android:id="@+id/button4"
@@ -81,9 +83,12 @@
             android:paddingStart="7dp"
             android:text="Ar"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:paddingLeft="7dp"
+            android:layout_marginLeft="27dp"
+            android:layout_alignParentLeft="true" />
 
 
     </RelativeLayout>
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
 </layout>
