--- a/app/src/main/res/layout/owner_pending_bookings.xml
+++ b/app/src/main/res/layout/owner_pending_bookings.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
 
         <variable
             name="viewModel"
-            type="com.example.android.e7gzlykora.views.OwnerPendingBookings" />
+            type="com.example.android.e7gzlykora.viewmodels.OwnerPendingBookingsViewModel" />
     </data>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/ownerPendingLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
